--- a/www/index.html
+++ b/www/index.html
@@ -1,34 +1,6 @@
 <!DOCTYPE html>
 <html>
-<!--
 
-    NOTE 1: In order for geolocation to work you may need to install the plug-in:
-    https://www.npmjs.com/package/cordova-plugin-geolocation
-
-    NOTE 2: As a best practice for security this sample uses a content security policy (CSP) header: http://content-security-policy.com/
-    Best practices for mobile are to use SSL and CSP.
-    You can comment this out for testing, however be aware that PhoneGap also may enforce additional security via the
-    res/xml/config.xml file.
-
-<head>
-    <meta http-equiv="Content-Security-Policy"
-        content="
-            default-src 'self'
-                http://js.arcgis.com
-                http://static.arcgis.com
-                http://services.arcgisonline.com
-                http://server.arcgisonline.com;
-            font-src
-                'self'
-                http://js.arcgis.com
-                data:;
-            img-src 'self'
-                http://js.arcgis.com
-                http://services.arcgisonline.com
-                http://server.arcgisonline.com
-                data:;
-            style-src 'self' http://js.arcgis.com 'unsafe-inline';
-            script-src 'self' http://js.arcgis.com 'unsafe-eval'">-->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no"/>
     <title>jQuery GPS Map</title>
@@ -41,20 +13,25 @@
 
     <script async src="scripts/jquery-2.1.3.min.js"></script>
     <script async src="scripts/jquery.mobile-1.4.5.min.js"></script>
+	
 </head>
 <body>
 
-    <div data-role="page" id="home">
+     <div data-role="page" id="home">
 
-        <div data-theme="a" data-role="header" data-position="fixed">
-            <h3>Geolocation Demo</h3>
-        </div>
+    <div data-theme="a" data-role="header" data-position="fixed" class="mainheader">
+          
+     </div>
 
         <div role="main" class="ui-content">
-            <div id="mapDiv"></div>
+      <div style="width:400px;">
+     <a href="search.html"> <input type="button" value="Search"> </a>
+      </div>
+         <div id="mapDiv" style="width:400px;position:relative;">
+          
+      </div>
         </div>
-
-    </div>
+        </div>
 
     <script src="http://js.arcgis.com/3.14"></script>
     <!-- For more info on jQueryHelper: https://github.com/Esri/jquery-mobile-map-js -->
