--- a/www/index.html
+++ b/www/index.html
@@ -47,7 +47,7 @@
     <div data-role="page" id="home">
 
         <div data-theme="a" data-role="header" data-position="fixed">
-            <h3>Geolocation Demo</h3>
+            <h3>Your Current Location</h3>
         </div>
 
         <div role="main" class="ui-content">
