--- a/www/search.html
+++ b/www/search.html
@@ -31,7 +31,7 @@
 
         <div role="main" class="ui-content">
       <div style="width:400px;">
-     <a href="search.html"> <input type="button" value="Search"> </a>
+     <a href="index.html"> <input type="button" value="Search"> </a>
       </div>
          <div id="mapDiv" style="width:400px;position:relative;">
           
