--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,7 @@
      </div>
 
         <div role="main" class="ui-content">
-      
+hell
       <div >
           <div id="search"></div>  
             <div id="map" style="width:400px; height:350px;">
