--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,7 @@
           
       </div>
 
-     <a href="search.html"> <input type="button" value="Go Back" style=" height:30px; margin-top:5px;"> </a>
+     <a href="search.html"> <input type="button" value="Get current location" style=" height:30px; margin-top:5px;"> </a>
         </div>
         </div>
 
