--- a/www/index.html
+++ b/www/index.html
@@ -180,6 +180,7 @@ html {
           }); 
       });
 </script>
+  <script src="http://js.arcgis.com/3.14"></script>
 <script src="scripts/jQueryHelper.js"></script>
  <script src="scripts/jquerygps.js"></script>
 <script src="cordova.js"></script>
