--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Touch Swipeable Sidebar Menu Demo</title>
+      <title>Home Page</title>
       <style>
 body,
 html {
@@ -123,9 +123,7 @@ html {
     <link rel="stylesheet" href="css/themes/jquery.mobile.structure-1.4.5.min.css" />
     <link rel="stylesheet" href="css/jquery.css">
 
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no"/>
-    <title>Basic Map</title>
+
 	<link rel="stylesheet" href="scripts/esri/edijit/themes/claro/claro.css">
    <link rel="stylesheet" href="scripts/esri/esri/css/esri.css">
     <link rel="stylesheet" href="css/basic.css">
