--- a/www/search.html
+++ b/www/search.html
@@ -152,7 +152,8 @@ html {
           <div class="swipe-area"></div>
           <a href="#" data-toggle=".container" id="sidebar-toggle"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
           <div class="content">
-         search
+         <div id="search"></div>
+   <div id="map"></div>
           </div>
         </div>
       </div>
@@ -180,7 +181,7 @@ html {
       });
 </script>
 <script src="scripts/jQueryHelper.js"></script>
- <script src="scripts/jquerygps.js"></script>
+ <script src="scripts/search.js"></script>
 <script src="cordova.js"></script>
 </body>
 </html>
