--- a/www/search.html
+++ b/www/search.html
@@ -37,7 +37,7 @@ html {
   top: 0;
   height: 100%;
   background:url(images/jeans-bg.png);
-  z-index: 0;
+  z-index: 999;
 }
 
 #sidebar {
@@ -87,7 +87,7 @@ html {
 .main-content .content {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
-  padding-left: 60px;
+  margin-left: 60px;
   width: 100%;
 }
 
@@ -161,7 +161,7 @@ html {
           <div class="swipe-area"></div>
           <a href="#" data-toggle=".container" id="sidebar-toggle"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
 			
-          <div class="content" style="height:100%;margin-left:50px;">
+          <div class="content" style="height:100%;">
          <div id="search" style="margin-top:20px;"></div>
    <div id="map" style="height:100%;"></div>
           </div>
