--- a/www/search.html
+++ b/www/search.html
@@ -87,7 +87,7 @@ html {
 .main-content .content {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
-  margin-left: 60px;
+  padding-left: 60px;
   width: 100%;
 }
 
@@ -161,7 +161,7 @@ html {
           <div class="swipe-area"></div>
           <a href="#" data-toggle=".container" id="sidebar-toggle"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
 			
-          <div class="content" style="height:100%;">
+          <div class="content" style="height:90%;float:right;">
          <div id="search" style="margin-top:20px;"></div>
    <div id="map" style="height:100%;"></div>
           </div>
