--- a/www/search.html
+++ b/www/search.html
@@ -161,7 +161,7 @@ html {
           <div class="swipe-area"></div>
           <a href="#" data-toggle=".container" id="sidebar-toggle"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
 			
-          <div class="content" style="height:100%;float:right;width:90%">
+          <div class="content" style="height:100%;">
          <div id="search" style="margin-top:20px;"></div>
    <div id="map" style="height:100%;"></div>
           </div>
