--- a/www/search.html
+++ b/www/search.html
@@ -162,8 +162,7 @@ html {
           <a href="#" data-toggle=".container" id="sidebar-toggle"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
 			
           <div class="content" style="height:100%;">
-         <div id="search" style="margin-top:20px;"></div>
-   <div id="map" style="height:100%;"></div>
+         ggggggfggg
           </div>
         </div>
       </div>
