--- a/www/search.html
+++ b/www/search.html
@@ -148,7 +148,7 @@ html {
       </head>
 
 <body>
-   <div class="container">
+   <div class="newcontainer">
  <div id="sidebar">
           <ul>
             <li><a href="index.html">Home</a></li>
@@ -159,7 +159,7 @@ html {
     
 <div class="main-content">
           <div class="swipe-area"></div>
-          <a href="#" data-toggle=".container" id="sidebar-toggle"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
+          <a href="#" data-toggle=".newcontainer" id="sidebar-toggle"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
 			
           <div class="content" style="height:100%;">
          ggggggfggg
@@ -171,6 +171,7 @@ html {
       <script>
   $(window).load(function(){
         $("[data-toggle]").click(function() {
+        	alert('hi');
           var toggle_el = $(this).data("toggle");
           $(toggle_el).toggleClass("open-sidebar");
         });
@@ -178,11 +179,11 @@ html {
               swipeStatus:function(event, phase, direction, distance, duration, fingers)
                   {
                       if (phase=="move" && direction =="right") {
-                           $(".container").addClass("open-sidebar");
+                           $(".newcontainer").addClass("open-sidebar");
                            return false;
                       }
                       if (phase=="move" && direction =="left") {
-                           $(".container").removeClass("open-sidebar");
+                           $(".newcontainer").removeClass("open-sidebar");
                            return false;
                       }
                   }
