--- a/www/search.html
+++ b/www/search.html
@@ -28,7 +28,7 @@ html {
   transition: left 0.4s ease-in-out;
 }
 
-.container.open-sidebar { left: 240px; }
+.newcontainer.open-sidebar { left: 240px; }
 
 .swipe-area {
   position: absolute;
