--- a/www/search.html
+++ b/www/search.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Touch Swipeable Sidebar Menu Demo</title>
+      <title>Home Page</title>
       <style>
 body,
 html {
@@ -117,27 +117,14 @@ html {
 }
 
 .main-content #sidebar-toggle .bar:last-child { margin-bottom: 0; }
-    
-      #search {
-       
-      position: absolute;
-    z-index: 2;
-    top: 20px;
-    left: 74px;
-		
-      }
-.content{position:relative;}
-#search{margin-top:20px;}
 </style>
  <link rel="stylesheet" href="css/themes/black2.min.css"/>
-    <link rel="stylesheet" href="css/themes/jquery.mobile.icons.min.css"/>
+ <link rel="stylesheet" href="css/themes/jquery.mobile.icons.min.css"/>
     <link rel="stylesheet" href="css/themes/jquery.mobile.structure-1.4.5.min.css" />
     <link rel="stylesheet" href="css/jquery.css">
 
- 
-	<link rel="stylesheet" href="scripts/esri/edijit/themes/claro/claro.css">
-   <link rel="stylesheet" href="scripts/esri/esri/css/esri.css">
-    <link rel="stylesheet" href="css/basic.css">
+
+	
 
     <link rel="stylesheet" href="http://js.arcgis.com/3.14/esri/css/esri.css">
    
@@ -160,9 +147,9 @@ html {
 <div class="main-content">
           <div class="swipe-area"></div>
           <a href="#" data-toggle=".container" id="sidebar-toggle"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
-			
-          <div class="content" style="height:100%;">
-         fhghggggggg
+          <div class="content">
+         Search
+          </div>
           </div>
         </div>
       </div>
@@ -189,8 +176,9 @@ html {
           }); 
       });
 </script>
+  <script src="http://js.arcgis.com/3.14"></script>
 <script src="scripts/jQueryHelper.js"></script>
- <script src="scripts/search.js"></script>
+ <script src="scripts/jquerygps.js"></script>
 <script src="cordova.js"></script>
 </body>
 </html>
