--- a/www/search.html
+++ b/www/search.html
@@ -15,7 +15,6 @@ html {
   font-family: helvetica;
   font-weight: 100;
 }
-
 .container {
   position: relative;
   height: 100%;
@@ -27,9 +26,7 @@ html {
   -o-transition: left 0.4s ease-in-out;
   transition: left 0.4s ease-in-out;
 }
-
 .container.open-sidebar { left: 240px; }
-
 .swipe-area {
   position: absolute;
   width: 50px;
@@ -39,7 +36,6 @@ html {
   background:url(images/jeans-bg.png);
   z-index: 0;
 }
-
 #sidebar {
   background: #DF314D;
   position: absolute;
@@ -49,15 +45,12 @@ html {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
 }
-
 #sidebar ul {
   margin: 0;
   padding: 0;
   list-style: none;
 }
-
 #sidebar ul li { margin: 0; }
-
 #sidebar ul li a {
   padding: 15px 20px;
   font-size: 16px;
@@ -72,9 +65,7 @@ html {
   -o-transition: background 0.3s ease-in-out;
   transition: background 0.3s ease-in-out;
 }
-
 #sidebar ul li:hover a { background: #C9223D; }
-
 .main-content {
   width: 100%;
   height: 100%;
@@ -83,21 +74,17 @@ html {
   -moz-box-sizing: border-box;
   position: relative;
 }
-
 .main-content .content {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   padding-left: 60px;
   width: 100%;
 }
-
 .main-content .content h1 { font-weight: 100; }
-
 .main-content .content p {
   width: 100%;
   line-height: 160%;
 }
-
 .main-content #sidebar-toggle {
   background: #DF314D;
   border-radius: 3px;
@@ -106,7 +93,6 @@ html {
   padding: 10px 7px;
   float: left; margin:8px;
 }
-
 .main-content #sidebar-toggle .bar {
   display: block;
   width: 18px;
@@ -115,7 +101,6 @@ html {
   background-color: #fff;
   border-radius: 1px;
 }
-
 .main-content #sidebar-toggle .bar:last-child { margin-bottom: 0; }
 </style>
  <link rel="stylesheet" href="css/themes/black2.min.css"/>
@@ -148,7 +133,7 @@ html {
           <div class="swipe-area"></div>
           <a href="#" data-toggle=".container" id="sidebar-toggle"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
           <div class="content">
-         Search
+         <div id="mapDiv" style="margin-left:50px; height:100%;">
           </div>
           </div>
         </div>
