--- a/www/search.html
+++ b/www/search.html
@@ -133,7 +133,7 @@ html {
           <div class="swipe-area"></div>
           <a href="#" data-toggle=".container" id="sidebar-toggle"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
           <div class="content">
-         <div id="mapDiv" style="margin-left:50px; height:100%;">
+        hellllo
           </div>
           </div>
         </div>
@@ -163,7 +163,7 @@ html {
 </script>
   <script src="http://js.arcgis.com/3.14"></script>
 <script src="scripts/jQueryHelper.js"></script>
- <script src="scripts/jquerygps.js"></script>
+
 <script src="cordova.js"></script>
 </body>
 </html>
