--- a/www/search.html
+++ b/www/search.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Home Page</title>
+      <title>Touch Swipeable Sidebar Menu Demo</title>
       <style>
 body,
 html {
@@ -15,6 +15,7 @@ html {
   font-family: helvetica;
   font-weight: 100;
 }
+
 .container {
   position: relative;
   height: 100%;
@@ -26,7 +27,9 @@ html {
   -o-transition: left 0.4s ease-in-out;
   transition: left 0.4s ease-in-out;
 }
+
 .container.open-sidebar { left: 240px; }
+
 .swipe-area {
   position: absolute;
   width: 50px;
@@ -36,6 +39,7 @@ html {
   background:url(images/jeans-bg.png);
   z-index: 0;
 }
+
 #sidebar {
   background: #DF314D;
   position: absolute;
@@ -45,12 +49,15 @@ html {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
 }
+
 #sidebar ul {
   margin: 0;
   padding: 0;
   list-style: none;
 }
+
 #sidebar ul li { margin: 0; }
+
 #sidebar ul li a {
   padding: 15px 20px;
   font-size: 16px;
@@ -65,7 +72,9 @@ html {
   -o-transition: background 0.3s ease-in-out;
   transition: background 0.3s ease-in-out;
 }
+
 #sidebar ul li:hover a { background: #C9223D; }
+
 .main-content {
   width: 100%;
   height: 100%;
@@ -74,17 +83,21 @@ html {
   -moz-box-sizing: border-box;
   position: relative;
 }
+
 .main-content .content {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   padding-left: 60px;
   width: 100%;
 }
+
 .main-content .content h1 { font-weight: 100; }
+
 .main-content .content p {
   width: 100%;
   line-height: 160%;
 }
+
 .main-content #sidebar-toggle {
   background: #DF314D;
   border-radius: 3px;
@@ -93,6 +106,7 @@ html {
   padding: 10px 7px;
   float: left; margin:8px;
 }
+
 .main-content #sidebar-toggle .bar {
   display: block;
   width: 18px;
@@ -101,15 +115,29 @@ html {
   background-color: #fff;
   border-radius: 1px;
 }
+
 .main-content #sidebar-toggle .bar:last-child { margin-bottom: 0; }
+    
+      #search {
+       
+      position: absolute;
+    z-index: 2;
+    top: 20px;
+    left: 74px;
+		
+      }
+.content{position:relative;}
+#search{margin-top:20px;}
 </style>
  <link rel="stylesheet" href="css/themes/black2.min.css"/>
- <link rel="stylesheet" href="css/themes/jquery.mobile.icons.min.css"/>
+    <link rel="stylesheet" href="css/themes/jquery.mobile.icons.min.css"/>
     <link rel="stylesheet" href="css/themes/jquery.mobile.structure-1.4.5.min.css" />
     <link rel="stylesheet" href="css/jquery.css">
 
-
-	
+ 
+	<link rel="stylesheet" href="scripts/esri/edijit/themes/claro/claro.css">
+   <link rel="stylesheet" href="scripts/esri/esri/css/esri.css">
+    <link rel="stylesheet" href="css/basic.css">
 
     <link rel="stylesheet" href="http://js.arcgis.com/3.14/esri/css/esri.css">
    
@@ -132,9 +160,9 @@ html {
 <div class="main-content">
           <div class="swipe-area"></div>
           <a href="#" data-toggle=".container" id="sidebar-toggle"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
-          <div class="content">
-        hellllo
-          </div>
+			
+          <div class="content" style="height:100%;">
+         fhghggggggg
           </div>
         </div>
       </div>
@@ -161,9 +189,8 @@ html {
           }); 
       });
 </script>
-  <script src="http://js.arcgis.com/3.14"></script>
 <script src="scripts/jQueryHelper.js"></script>
-
+ <script src="scripts/search.js"></script>
 <script src="cordova.js"></script>
 </body>
 </html>
