--- a/www/search.html
+++ b/www/search.html
@@ -162,7 +162,8 @@ html {
           <a href="#" data-toggle=".container" id="sidebar-toggle"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
 			
           <div class="content" style="height:100%;">
-         fhghggggggg
+         <div id="search" ></div>
+   <div id="map" ></div>
           </div>
         </div>
       </div>
