--- a/www/search.html
+++ b/www/search.html
@@ -161,9 +161,9 @@ html {
           <div class="swipe-area"></div>
           <a href="#" data-toggle=".container" id="sidebar-toggle"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
 			
-          <div class="content" style="height: 100%;width: 100%;margin: 0;padding: 0;">
+          <div class="content" style="height:100%;margin: 0;padding: 0;">
          <div id="search" ></div>
-   <div id="map" style="height: 100%;width: 100%;margin: 0;padding: 0;" ></div>
+   <div id="map" style="height: 100%;margin: 0;padding: 0;" ></div>
           </div>
         </div>
       </div>
