--- a/www/search.html
+++ b/www/search.html
@@ -161,8 +161,8 @@ html {
           <div class="swipe-area"></div>
           <a href="#" data-toggle=".container" id="sidebar-toggle"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
 			
-          <div class="content" style="height:100%;">
-         <div id="search" ></div>
+          <div class="content" style="height:100%;margin-left:-10px;">
+         <div id="search" style="margin-bottom:-10px;"></div>
    <div id="map" style="height: 100%;" ></div>
           </div>
         </div>
