--- a/www/search.html
+++ b/www/search.html
@@ -123,7 +123,7 @@ html {
       position: absolute;
     z-index: 2;
     top: 20px;
-    left: 74px;
+    left: 50px;
 		
       }
 .content{position:relative;}
@@ -162,8 +162,8 @@ html {
           <a href="#" data-toggle=".container" id="sidebar-toggle"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
 			
           <div class="content" style="height:100%;margin-left:-10px;">
-         <div id="search" style="margin-bottom:-10px;width:200px;"></div>
-   <div id="map" style="height: 100%;" ></div>
+         <div id="search" style="margin-bottom:-8px;width:200px;"></div>
+   <div id="map" style="height: 100%;margin-top:-5px;" ></div>
           </div>
         </div>
       </div>
