--- a/www/search.html
+++ b/www/search.html
@@ -120,10 +120,10 @@ html {
     
       #search {
        
-      position: absolute;
-    z-index: 2;
-    top: 20px;
-    left: 50px;
+      position: absolute !important;
+    z-index: 2 !important;
+    top: 20px !important;
+    left: 50px !important;
 		
       }
 .content{position:relative;}
