--- a/www/search.html
+++ b/www/search.html
@@ -162,7 +162,7 @@ html {
           <a href="#" data-toggle=".container" id="sidebar-toggle"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
 			
           <div class="content" style="height:100%;margin-left:-10px;">
-         <div id="search" style="margin-bottom:-8px;width:200px;"></div>
+         <div id="search" style="position: absolute !important;"></div>
    <div id="map" style="height: 100%;margin-top:-5px;" ></div>
           </div>
         </div>
