--- a/www/index.html
+++ b/www/index.html
@@ -140,7 +140,7 @@ html {
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="search.html">Search</a></li>
-            
+            <li><a href="lot.html">Search</a></li>
           </ul>
         </div>
     
