--- a/www/search.html
+++ b/www/search.html
@@ -177,6 +177,12 @@ html {
       <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script> 
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.4/jquery.touchSwipe.min.js"></script> 
       <script>
+      	$('#sidebar-toggle').click(function()
+      	{
+      		alert(hello);
+      	});
+      </script>
+      <script>
   $(window).load(function(){
         $("[data-toggle]").click(function() {
           var toggle_el = $(this).data("toggle");
