--- a/www/search.html
+++ b/www/search.html
@@ -179,7 +179,7 @@ html {
       <script>
       	$('#sidebar-toggle').click(function()
       	{
-      		alert(hello);
+      		alert('hello');
       	});
       </script>
       <script>
