--- a/www/search.html
+++ b/www/search.html
@@ -179,6 +179,7 @@ html {
       <script>
       function togglef()
       	{
+      		alert("search");
       	   $("[data-toggle]").click(function() {
           var toggle_el = $(this).data("toggle");
           $(toggle_el).toggleClass("open-sidebar");
