--- a/www/index.html
+++ b/www/index.html
@@ -176,6 +176,29 @@ html {
           }); 
       });
 </script>
+<script>
+function toggelf()
+{
+	alert("index");
+$("[data-toggle]").click(function() {
+          var toggle_el = $(this).data("toggle");
+          $(toggle_el).toggleClass("open-sidebar");
+        });
+         $(".swipe-area").swipe({
+              swipeStatus:function(event, phase, direction, distance, duration, fingers)
+                  {
+                      if (phase=="move" && direction =="right") {
+                           $(".container").addClass("open-sidebar");
+                           return false;
+                      }
+                      if (phase=="move" && direction =="left") {
+                           $(".container").removeClass("open-sidebar");
+                           return false;
+                      }
+                  }
+          }); 	
+}
+</script>
   <script src="http://js.arcgis.com/3.14"></script>
 <script src="scripts/jQueryHelper.js"></script>
  <script src="scripts/jquerygps.js"></script>
