--- a/www/index.html
+++ b/www/index.html
@@ -146,7 +146,7 @@ html {
     
 <div class="main-content">
           <div class="swipe-area"></div>
-          <a href="#" data-toggle=".container" id="sidebar-toggle"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
+          <a href="#" data-toggle=".container" id="sidebar-toggle" onclick="toggelf()"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
           <div class="content">
          <div id="mapDiv" style="margin-left:50px; height:100%;">
           </div>
