--- a/www/search.html
+++ b/www/search.html
@@ -169,7 +169,7 @@ html {
           <div class="swipe-area"></div>
           <a href="#" data-toggle=".container" id="sidebar-toggle" onclick="togglef()"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
           <div class="content">
-         <div id="search"></div>
+         <div id="search">hello</div>
           <div id="map"></div>
           </div>
         </div>
