--- a/www/search.html
+++ b/www/search.html
@@ -156,7 +156,7 @@ html {
    </style>
       </head>
 
-<body onload="testfun()">
+<body onLoad="testfun()">
 <div class="container">
         <div id="sidebar">
           <ul>
