--- a/www/index.html
+++ b/www/index.html
@@ -159,7 +159,7 @@ html {
 <script>
 function toggelf()
 {
-	alert("index");
+	//alert("index");
 
           var toggle_el = $("#sidebar-toggle").data("toggle");
           $(toggle_el).toggleClass("open-sidebar");
