--- a/www/search.html
+++ b/www/search.html
@@ -122,7 +122,7 @@ html {
 
 </style>
 <script>
-function newfun()
+function testfun()
 {
 	alert("hello");
 }
@@ -183,7 +183,7 @@ function newfun()
       <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script> 
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.4/jquery.touchSwipe.min.js"></script> 
       <script>
-      newfun();
+      //newfun();
       function togglef()
       	{
       		//alert("search");
