--- a/www/search.html
+++ b/www/search.html
@@ -183,7 +183,7 @@ function testfun()
       <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script> 
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.4/jquery.touchSwipe.min.js"></script> 
       <script>
-      testfun();
+      //testfun();
       function togglef()
       	{
       		//alert("search");
