--- a/www/search.html
+++ b/www/search.html
@@ -168,7 +168,7 @@ function testfun()
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="search.html">Search</a></li>
-            <li><a href="search.html">Lot View</a></li>
+            <li><a href="lot.html">Lot View</a></li>
           </ul>
         </div>
         <div class="main-content">
