--- a/www/search.html
+++ b/www/search.html
@@ -122,7 +122,7 @@ html {
 
 </style>
 <script>
-function testfun()
+function bodyfun()
 {
 	alert("hello");
 }
@@ -162,7 +162,7 @@ function testfun()
    </style>
       </head>
 
-<body>
+<body onLoad="bodyfun()">
 <div class="container">
         <div id="sidebar">
           <ul>
