--- a/www/search.html
+++ b/www/search.html
@@ -124,7 +124,7 @@ html {
 <script>
 function bodyfun()
 {
-	alert("hello");
+document.addEventListener("deviceready", onDeviceReady, false);
 }
 </script>
  <link rel="stylesheet" href="css/themes/black2.min.css"/>
