--- a/www/search.html
+++ b/www/search.html
@@ -160,7 +160,7 @@ document.addEventListener("deviceready", onDeviceReady, false);
          margin-left: 60px
       }
    </style>
-   <script src="cordova.js" charset="utf-8"></script>
+   <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
    <script type="text/javascript" charset="utf-8">
 
     // Wait for device API libraries to load
