--- a/www/search.html
+++ b/www/search.html
@@ -31,13 +31,13 @@ html {
 .container.open-sidebar { left: 240px; }
 
 .swipe-area {
-  position: absolute;
-  width: 50px;
-  left: 0;
-  top: 0;
-  height: 100%;
-  background: #f3f3f3;
-  z-index: 0;
+    position: absolute;
+    width: 50px;
+    left: 0;
+    top: 0;
+    height: 100%;
+    background: url(images/jeans-bg.png);
+    z-index: 0;
 }
 
 #sidebar {
@@ -192,7 +192,7 @@ document.addEventListener("deviceready", onDeviceReady, false);
           <div class="swipe-area"></div>
           <a href="#" data-toggle=".container" id="sidebar-toggle" onclick="togglef()"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
           <div class="content">
-         <div id="search">hello</div>
+         <div id="search"></div>
           <div id="map"></div>
           </div>
         </div>
