--- a/www/search.html
+++ b/www/search.html
@@ -87,9 +87,9 @@ html {
 .main-content .content {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
-  padding-left: 50px;
+  padding-left: 40px;
   width: 100%;
-  height:100%;
+  height:1000px; margin-top:30px; 
 }
 
 .main-content .content h1 { font-weight: 100; }
