--- a/www/search.html
+++ b/www/search.html
@@ -89,7 +89,7 @@ html {
   -moz-box-sizing: border-box;
   padding-left: 40px;
   width: 100%;
-  height:1000px; margin-top:30px; 
+  height:1000px; margin-top:-30px; 
 }
 
 .main-content .content h1 { font-weight: 100; }
@@ -194,6 +194,7 @@ document.addEventListener("deviceready", onDeviceReady, false);
           <div class="swipe-area"></div>
           <a href="#" data-toggle=".container" id="sidebar-toggle" onclick="togglef()"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
           <div class="content">
+		  hello
          <div id="search"></div>
           <div id="map"></div>
           </div>
