--- a/www/search.html
+++ b/www/search.html
@@ -90,6 +90,7 @@ html {
   padding-left: 40px;
   width: 100%;
   height:1000px; margin-top:-30px; 
+  margin-left:-30px; 
 }
 
 .main-content .content h1 { font-weight: 100; }
@@ -119,7 +120,7 @@ html {
 }
 
 .main-content #sidebar-toggle .bar:last-child { margin-bottom: 0; }
-svg[Attributes Style] {height:100px !important;}
+
 
 
 </style>
