--- a/www/search.html
+++ b/www/search.html
@@ -157,9 +157,9 @@ document.addEventListener("deviceready", onDeviceReady, false);
       }
       #search {
          display: block;
-         position: absolute;
+         position: relative;
          z-index: 2;
-         top: 0px;
+         top: 70px;
          margin-left: 50px
       }
    </style>
