--- a/www/search.html
+++ b/www/search.html
@@ -9,7 +9,7 @@
  <style>
 body,
 html {
-  height: 100%;
+  height: 100vh;
   margin: 0;
   overflow: hidden;
   font-family: helvetica;
@@ -17,7 +17,6 @@ html {
 }
 
 .container {
-  position: relative;
   height: 100%;
   width: 100%;
   left: 0;
@@ -31,13 +30,12 @@ html {
 .container.open-sidebar { left: 240px; }
 
 .swipe-area {
-    position: absolute;
-    width: 50px;
-    left: 0;
-    top: 0;
-    height: 100%;
-    background: url(images/jeans-bg.png);
-    z-index: 0;
+  width: 50px;
+  left: 0;
+  top: 0;
+  height: 100%;
+  background: #f3f3f3;
+  z-index: 0;
 }
 
 #sidebar {
@@ -77,20 +75,18 @@ html {
 
 .main-content {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   padding: 0;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
-  position: relative;
 }
 
 .main-content .content {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
-  padding-left: 40px;
+  padding-left: 50px;
   width: 100%;
-  height:1000px; margin-top:-30px; 
-  margin-left:-30px; 
+  height:100%;
 }
 
 .main-content .content h1 { font-weight: 100; }
@@ -104,7 +100,6 @@ html {
   background: #DF314D;
   border-radius: 3px;
   display: block;
-  position: relative;
   padding: 10px 7px;
   float: left;
       margin: 8px;
@@ -120,8 +115,6 @@ html {
 }
 
 .main-content #sidebar-toggle .bar:last-child { margin-bottom: 0; }
-
-
 
 </style>
 <script>
@@ -150,17 +143,17 @@ document.addEventListener("deviceready", onDeviceReady, false);
       html,
       body,
       #map {
-         height: 100%;
+         height: 100vh;
          width: 100%;
          margin: 0;
-         padding: 0; position:relative;
+         padding: 0;
       }
       #search {
          display: block;
-         position: relative;
+         position: absolute;
          z-index: 2;
-         top: 70px;
-         margin-left: 50px
+         top: 20px;
+         margin-left: 60px
       }
    </style>
    <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
@@ -195,7 +188,7 @@ document.addEventListener("deviceready", onDeviceReady, false);
           <div class="swipe-area"></div>
           <a href="#" data-toggle=".container" id="sidebar-toggle" onclick="togglef()"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
           <div class="content">
-		 <div id="search"></div>
+         <div id="search">hello</div>
           <div id="map"></div>
           </div>
         </div>
