--- a/www/search.html
+++ b/www/search.html
@@ -188,8 +188,8 @@ document.addEventListener("deviceready", onDeviceReady, false);
           <div class="swipe-area"></div>
           <a href="#" data-toggle=".container" id="sidebar-toggle" onclick="togglef()"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
           <div class="content">
-         <div id="search">hello</div>
-          <div id="map"></div>
+         <div id="search"></div>
+          <div id="map" style="margin-top:-30px; margin-left:-10px; height:100vh;"></div>
           </div>
         </div>
       </div>
