--- a/www/search.html
+++ b/www/search.html
@@ -188,7 +188,7 @@ document.addEventListener("deviceready", onDeviceReady, false);
           <div class="swipe-area"></div>
           <a href="#" data-toggle=".container" id="sidebar-toggle" onclick="togglef()"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
           <div class="content">
-         <div id="search" style="position:absolute;"></div>
+         <div id="search" style="position:absolute; width:100%; float:left; margin-top:10px;"></div>
           <div id="map" style="margin-top:-50px; margin-left:-10px; height:100vh;"></div>
           </div>
         </div>
