--- a/www/search.html
+++ b/www/search.html
@@ -155,6 +155,12 @@ document.addEventListener("deviceready", onDeviceReady, false);
          top: 20px;
          margin-left: 60px
       }
+      .arcgisSearch .searchBtn{   
+      	z-index: 999999;
+    position: absolute;
+    left: 200px;
+      	
+      }
    </style>
    <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
    <script type="text/javascript" charset="utf-8">
