--- a/www/lot.html
+++ b/www/lot.html
@@ -174,7 +174,7 @@ function testfun()
           <div class="swipe-area"></div>
           <a href="#" data-toggle=".container" id="sidebar-toggle" onclick="togglef()"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
           <div class="content">
-         <div id="map"></div>
+         <div id="map" style="margin-top:-50px;margin-left:10px;height:100%"></div>
           </div>
         </div>
       </div>
