--- a/www/lot.html
+++ b/www/lot.html
@@ -173,8 +173,8 @@ function testfun()
         <div class="main-content">
           <div class="swipe-area"></div>
           <a href="#" data-toggle=".container" id="sidebar-toggle" onclick="togglef()"> <span class="bar"></span> <span class="bar"></span> <span class="bar"></span> </a>
-          <div class="content">
-         <div id="map" style="margin-top:-50px;margin-left:10px;height:100%"></div>
+          <div class="content" style="margin-top:-50px;margin-left:10px;height:100%">
+         <div id="map" ></div>
           </div>
         </div>
       </div>
